[package]
name = "crypto-server"
version = "0.1.0"
authors = ["SebNae <naesebi2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
rust-crypto = "0.2.36"
aes = "0.7.5"